src/objects/Account_Owner_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Owner History</relationshipLabel>
        <relationshipName>Account_Owner_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <formula>Owner__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Owner_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Account Owner History</label>
    <nameField>
        <displayFormat>OH-{000000}</displayFormat>
        <label>Account Owner #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Owner History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_Cannot_Be_After_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(End_Date__c)),
NOT(ISBLANK(Start_Date__c)),
Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
        <errorMessage>Start Date must be before or on the same day as End Date.</errorMessage>
    </validationRules>
</CustomObject>